criando a bese do meu site

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <title>Pikachu</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="bloco">   
+            <img src="./img/poke-bola.png" alt="poke-bola">
+             <span>Pokemon</span>  
+        </div>
+    </header>
     <main></main>
     <footer></footer>
     
