--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
     <title>Pikachu</title>
 </head>
 <body>
-    <header>
-        <div class="bloco">   
-            <img src="./img/poke-bola.png" alt="poke-bola">
-             <span>Pokemon</span>  
-        </div>
-    </header>
+    <header></header>
     <main></main>
     <footer></footer>
     
