feat: header desenvolvido

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <title>Pikachu</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="./img/poke-bola.png" alt="" class="pokebola">
+        <span>Pokemon</span>
+    </header>
     <main></main>
     <footer></footer>
     
