--- a/index.html
+++ b/index.html
@@ -16,8 +16,29 @@
         <img src="./img/poke-bola.png" alt="" class="pokebola">
         <span>Pokemon</span>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <span class="sombra">
+            Pikachu
+        </span>
+       <h1>
+           Pikachu
+       </h1>
+
+       <div class="container">
+                <div class="descricao">
+                    <h2>Let’s Go, Pikachu!</h2>
+                    <p>Torne-se o melhor Treinador de Pokémon que puder, enquanto batalha outros Treinadores, Líderes de Ginásios e a sinistra Equipe Rocket.</p>
+                </div>
+                <div class="download">
+                    <a href="#"></a>
+                        &#10515; Download
+                </div>
+       </div>
+       <img src="./img/pikachu (1).png" alt="pikachu" class="pikachu">
+    </main>
+    <footer>
+        Copyright © 2022 | @ Leonid
+    </footer>
     
 </body>
 </html>
