--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        <img src="./img/pikachu (1).png" alt="pikachu" class="pikachu">
     </main>
     <footer>
-        Copyright © 2022 | @ Leonid
+        Copyright © 2022 | @ Hugo
     </footer>
     
 </body>
