--- a/index.html
+++ b/index.html
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
     <title>Pikachu</title>
 </head>
 <body>
     <header>
-        <img src="./img/poke-bola.png" alt="" class="pokebola">
-        <span>Pokemon</span>
+        <img src="./img/poke-bola.png" alt="poke bola">
+        <span>Pokémon</span>
     </header>
     <main>
         <span class="sombra">
             Pikachu
         </span>
-       <h1>
-           Pikachu
-       </h1>
-
-       <div class="container">
-                <div class="descricao">
-                    <h2>Let’s Go, Pikachu!</h2>
-                    <p>Torne-se o melhor Treinador de Pokémon que puder, enquanto batalha outros Treinadores, Líderes de Ginásios e a sinistra Equipe Rocket.</p>
-                </div>
-                <div class="download">
-                    <a href="#"></a>
-                        &#10515; Download
-                </div>
-       </div>
-       <img src="./img/pikachu (1).png" alt="pikachu" class="pikachu">
+        <h1>
+            Pikachu
+        </h1>
+        <div class="container">
+            <div class="descricao">
+                <h2>Let’s Go, Pikachu!</h2>
+                <p>Torne-se o melhor Treinador de Pokémon que puder, enquanto batalha outros Treinadores, Líderes de Ginásios e a sinistra Equipe Rocket.</p>
+            </div>
+            <a href="#">
+                &#10515; Download
+            </a>
+        </div>
+        <img src="./img/pikachu (1).png" alt="pikachu" class="pikachu">
     </main>
     <footer>
-        Copyright © 2022 | @ Hugo
+        Copyright © 2025 | Hugo
     </footer>
-    
 </body>
 </html>
